core.lexer现在可以正常过滤掉空的doc实例
不包含api定义的代码块会生成一个空的doc实例，
之前这些实例会被添加到Tree.Docs中，最终造成在html中有大量的空行。

--- a/core/static/main.html
+++ b/core/static/main.html
@@ -15,10 +15,12 @@
             {{range $key, $docs:=.Docs}}
             <div>
                 <h2>{{$key}}</h2>
-                {{range $doc:=$docs}}
-                <section>
-                    {{template "doc" .}}
-                </section>
+                {{range $docs}}
+                    {{if .}}
+                    <section>
+                        {{template "doc" .}}
+                    </section>
+                    {{end}}
                 {{end}}
             </div>
             {{end}}
