精简apiStatus的描述方式，现在只有返回的状态码是必须的

--- a/core/static/doc.html
+++ b/core/static/doc.html
@@ -41,7 +41,7 @@
         <h4>Response</h4>
         {{range .Status}}
         <div>
-            <p>status:{{.Code}},  {{.Summary}},  {{.Type}}</p>
+            <p>status:{{.Code}},  {{.Summary}}</p>
             {{range $k,$v:=.Headers}}
             <p>{{$k}}:{{$v}}</p>
             {{end}}
