优化界面显示
添加info用于管理页首页脚的信息显示

--- a/core/static/footer.html
+++ b/core/static/footer.html
@@ -1,17 +1,21 @@
 {{define "footer"}}
     </div><!-- end .main -->
         <footer>
-            <p>内容由<a href="https://github.com/caixw/apidoc">apidoc</a>编译于<time id="date">{{.}}</time></p>
+            <p>内容由<a href="https://github.com/caixw/apidoc">apidoc</a>编译于<time id="date">{{.Date}}</time></p>
         </footer>
         <script>
-            $(document).ready(function(){
-                $('header .filter input').on('change', function(){
-                    var val = $(this).attr('value');
-                    $('.main section.'+val).each(function(index, elem){
-                        $(elem).slideToggle();
-                    });
-                })
+        $(document).ready(function(){
+            $('header .filter input').on('change', function(){
+                var val = $(this).attr('value');
+                $('.main section.'+val).each(function(index, elem){
+                    $(elem).slideToggle();
+                });
+            })
+
+            $('#groups').on('change', function(){
+                window.location.href = $(this).find('option:selected').val();
             });
+        });
         </script>
     </body>
 </html>
