将apiMethods改为apiMethod，不允许在同一个api文档中指定多个method

--- a/core/static/group.html
+++ b/core/static/group.html
@@ -1,7 +1,7 @@
 {{define "group"}}
-<section class="{{.Methods}}">
+<section class="{{.Method}}">
     <h3>
-        <span class="methods">{{.Methods}}</span>
+        <span class="method">{{.Method}}</span>
         <span class="url">{{.URL}}</span>
     </h3>
     <p>{{.Summary}}</p>
