--- a/index.html
+++ b/index.html
@@ -1,72 +1,176 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hans">
+    <head>
+        <meta charset='utf-8'>
+        <title>apidoc - RESTful api文档生成工具</title>
+        <meta name="keywords" content="apidoc,api,RESTful api,go,cpp,doc,文档生成" />
+        <meta name="description" content="apidoc : RESTful api文档生成工具" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.8/semantic.min.css">
+        <link rel="stylesheet" href="./style.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.8/semantic.min.js"></script>
+        <script src="./main.js"></script>
+    </head>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Apidoc : 提取注释中的内容生成api文档">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Apidoc</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/caixw/apidoc">View on GitHub</a>
-
-          <h1 id="project_title">Apidoc</h1>
-          <h2 id="project_tagline">提取注释中的内容生成api文档</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/caixw/apidoc/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/caixw/apidoc/tarball/master">Download this project as a tar.gz file</a>
-            </section>
+    <body>
+        <header>
+            <div class="ui container">
+                <span class="ui text menu left floated">
+                    <a class="item" href="#">apidoc</a>
+                </span>
+                <nav class="ui text menu right floated">
+                    <a class="item" href="#about">关于</a>
+                    <a class="item" href="#usage">使用</a>
+                    <a class="item" href="#docs">文档</a>
+                    <a class="item" href="https://github.com/caixw/apidoc"><i class="icon github"></i>Github</a>
+                </nav>
+                <div style="clear:both"></div>
+            </div>
         </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <div class="ui container" id="main">
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub for Mac or GitHub for Windows, simply sync your repository and you’ll see the new branch.</p>
+            <!-- about -->
+            <article class="ui piled segment" id="about">
+                <h2 class="ui header">关于</h2>
+                <p>apidc是一个简单的RESTful api文档生成工具，它从代码注释中提取特定格式的内容，生成文档。</p>
+                <p>目前已支持所有c语言注释风格的代码：PHP, Go, Java, Javascript, C/CPP等。</p>
+                <pre>
+                /**
+                 @api get /users/:id 获取指定用户的相关信息
+                 @apiGroup users
+                 @apiParam id int 表示用户id的唯一值
+                 @apiStatus 200 json ok
+                 @apiExample
+                 {"id":1, "name": "n1"}
+                */
+                </pre>
+            </article>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+            <!-- usage -->
+            <article class="ui piled segment" id="usage">
+                <h2 class="ui header">使用</h2>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+                <section>
+                    <h3>安装</h3>
+                    <p>1. 安装<a href="https://golang.org">Go</a>环境；</p>
+                    <p>2. 安装apidoc：<code>go get github.com/caixw/apidoc</code>；</p>
+                </section>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+                <section>
+                    <h3>命令行语法</h3>
+                    <p><code>apidoc [options] src doc</code></p>
+                    <p>src为源代码所在的目录。</p>
+                    <p>doc为产生后的文档存放目录，若该目录不存在，会尝试自动创建。</p>
+                    <p>options为一些可选的设置项：</p>
+                    <table class="ui very compact table">
+                        <thead>
+                            <tr><th>参数</th><th>默认值</th><th>描述</th></tr>
+                        </thead>
+                        <tbody>
+                            <tr><td>-r</td><td>true</td><td>是否检测子目录</td></tr>
+                            <tr>
+                                <td>-t</td><td>""</td><td>语言类型，可以是任何支持的语言名称，如go,php等</td>
+                            </tr>
+                            <tr>
+                                <td>-ext</td>
+                                <td>""</td>
+                                <td>只扫描这些扩展名的文件，不指定的情况下，根据语言类型自动匹配相应的扩展名</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
+            </article>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+            <!-- docs -->
+            <article class="ui piled segment" id="docs">
+                <h2 class="ui header">文档</h2>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+                <section>
+                    <h3>@api</h3>
+                    <p>语法:<code class="go">@api method url summary [\n detail]</code></p>
+                    <table class="ui very compact table">
+                        <thead>
+                            <tr><th>参数</th><th>可选</th><th>参数说明</th></tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>method</td><td>false</td><td>该api对应的请求方法</td>
+                            </tr>
+                            <tr>
+                                <td>url</td><td>false</td><td>该api的请求地址</td>
+                            </tr>
+                            <tr>
+                                <td>summary</td><td>false</td><td>该api的简要描述信息，到行尾结束</td>
+                            </tr>
+                            <tr>
+                                <td>detail</td>
+                                <td>true</td>
+                                <td>api的详细信息，可以多行，直到碰到下一行的@api开头的字符串</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p>example:</p>
+                    <pre>
+                    /**
+                     @api get /users/{id} 获取指定用户的相关信息
+                    */
+                    </pre>
+                </section>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+                <section>
+                    <h3>@apiGroup</h3>
+                    <p>@apiGroup提供了对api的分组信息</p>
+                    <p>语法：<code>@apiGroup groupName</code></p>
+                    <table class="ui very compact table">
+                        <thead>
+                            <tr><th>参数</th><th>描述</th></tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>groupName</td>
+                                <td>分组名称，相同名称的api将会被分配到一个文件中。</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p>example:</p>
+                    <pre>
+                    /**
+                     @apiGroup users
+                     */
+                    </pre>
+                </section>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+                <section>
+                    <h3>@apiVersion</h3>
+                    <p>@apiVersion用于描述一个api的版本信息。</p>
+                    <p>语法：<code>@apiVersion version</code></p>
+                    <table class="ui very compact table">
+                        <thead>
+                            <tr><th>参数</th><th>描述</th></tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>version</td>
+                                <td>版本号</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p>example:</p>
+                    <pre>
+                    /**
+                     @apiVersion 1.0.1
+                     */
+                    </pre>
+                </section>
+            </article>
+        </div>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Apidoc maintained by <a href="https://github.com/caixw">caixw</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+        <footer>
+            <div class="ui container">
+                <p>apidoc是基于<a rel="license" href="http://opensource.org/licenses/MIT">MIT</a>发布的开源软件。</p>
+                <p>本页面内容采用<a rel="license" href="http://creativecommons.org/licenses/by/4.0/">知识共享署名 4.0 国际许可协议</a>进行许可。</p>
+            </div>
+        </footer>
+    </body>
 </html>
