去掉@apiVersion相关描述

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                     <a class="item" href="#about">关于</a>
                     <a class="item" href="#usage">使用</a>
                     <a class="item" href="#docs">文档</a>
-                    <a class="item" href="https://github.com/caixw/apidoc"><i class="icon github"></i>Github</a>
+                    <a class="item" href="https://github.com/caixw/apidoc">
+                        <i class="icon github"></i>Github
+                    </a>
                 </nav>
                 <div style="clear:both"></div>
             </div>
@@ -128,19 +130,6 @@
                     <pre>
                     /**
                      @apiGroup users
-                     */
-                    </pre>
-                </section>
-
-                <!-- @apiVersion -->
-                <section id="apiversion">
-                    <h3>@apiVersion</h3>
-                    <p>@apiVersion用于描述一个api的版本信息。</p>
-                    <p>语法：<code>@apiVersion version</code></p>
-                    <p>示例：</p>
-                    <pre>
-                    /**
-                     @apiVersion 1.0.1
                      */
                     </pre>
                 </section>
