现在会将所有的参数打包到Options中，再传递给output.Html()函数

--- a/output/static/footer.html
+++ b/output/static/footer.html
@@ -1,7 +1,7 @@
 {{define "footer"}}
     </div><!-- end .main -->
         <footer>
-            <p>内容由<a href="https://github.com/caixw/apidoc">apidoc</a>编译于<time id="date">{{.Date}}</time></p>
+            <p>内容由<a href="https://github.com/caixw/apidoc">apidoc</a>编译于<time>{{.Date}}</time></p>
         </footer>
         <script>
         $(document).ready(function(){
