--- a/index.html
+++ b/index.html
@@ -77,6 +77,23 @@
                 <section>
                     <h3>配置文件</h3>
                     <p>apidoc通过配置文件来控制其行为。配置文件名为<code>.apidoc.json</code>。</p>
+                    <pre>
+                    {
+                        "input":{
+                            "dir":       "./",
+                            "recursive": true,
+                            "type":      "go"
+                        },
+                        "output":{
+                            "dir": "./doc"
+                        },
+                        "doc":{
+                            "title":    "doc title",
+                            "version":  "0.1beta",
+                            "baseURL":  "api.test.com"
+                        }
+                    }
+                    </pre>
                     <table class="ui very compact table">
                         <thead>
                             <tr><th>名称</th><th>类型</th><th>默认值</th><th>描述</th></tr>
