--- a/output/static/group.html
+++ b/output/static/group.html
@@ -1,69 +1,74 @@
 {{define "group"}}
-<section class="{{.Method}}">
+<section class="api method-{{.Method}}">
     <h3>
         <span class="method">{{.Method}}</span>
         <span class="url">{{.URL}}</span>
     </h3>
-    <p>{{.Summary}}</p>
-    {{if .Description}}
-    <p class="description">{{.Description}}</p>
-    {{end}}
+    <div class="api-content">
+        <p>{{.Summary}}</p>
+        {{if .Description}}
+        <p class="description">{{.Description}}</p>
+        {{end}}
 
-    {{if .Queries}}
-        <h4>查询参数</h4>
-        {{template "param" .Queries}}
-    {{end}}
+        {{if .Queries}}
+            <h4>查询参数</h4>
+            {{template "param" .Queries}}
+        {{end}}
 
-    {{if .Params}}
-        <h4>参数</h4>
-        {{template "param" .Params}}
-    {{end}}
+        {{if .Params}}
+            <h4>参数</h4>
+            {{template "param" .Params}}
+        {{end}}
 
-    {{if .Request}}
-    <div>
-        <h4>请求</h4>
+        {{if .Request}}
         <div>
-            <p>数据类型: {{.Request.Type}}</p>
+            <h4>请求</h4>
+            <div>
+                <p>数据类型: {{.Request.Type}}</p>
 
-            {{if .Request.Headers}}
-            <h5>header:</h5>
-            <ul>
-                {{range $k,$v:=.Request.Headers}}
-                <li><span class="header-key">{{$k}}:</span>{{$v}}</li>
+                {{if .Request.Headers}}
+                <h5>请求头:</h5>
+                <ul>
+                    {{range $k,$v:=.Request.Headers}}
+                    <li><span class="header-key">{{$k}}:</span>{{$v}}</li>
+                    {{end}}
+                </ul>
                 {{end}}
-            </ul>
-            {{end}}
 
-            {{if .Request.Params}}
-            <h5>参数:</h5>
-                {{template "param" .Request.Params}}
-            {{end}}
-
-            {{if .Request.Examples}}
-            <h5>example:</h5>
-                {{range .Request.Examples}}
-                <pre class="code" data-type="{{.Type}}">{{.Code}}</pre>
+                {{if .Request.Params}}
+                <h5>参数:</h5>
+                    {{template "param" .Request.Params}}
                 {{end}}
-            {{end}}
+
+                {{if .Request.Examples}}
+                <h5>示例:</h5>
+                    {{range .Request.Examples}}
+                    <pre class="code" data-type="{{.Type}}">{{.Code}}</pre>
+                    {{end}}
+                {{end}}
+            </div>
         </div>
-    </div>
-    {{end}}
+        {{end}}
 
-    {{if .Success}}
-    <div>
-        <h4>响应-SUCCESS</h4>
-        {{template "response" .Success}}
-    </div>
-    {{end}}
+        {{if .Success}}
+        <div>
+            <h4>响应-SUCCESS</h4>
+            {{template "response" .Success}}
+        </div>
+        {{end}}
 
-    {{if .Error}}
-    <div>
-        <h4>响应-ERROR</h4>
-        {{template "response" .Error}}
+        {{if .Error}}
+        <div>
+            <h4>响应-ERROR</h4>
+            {{template "response" .Error}}
+        </div>
+        {{end}}
     </div>
-    {{end}}
 </section>
 {{end}}
+
+
+
 
 {{define "param"}}
     <ul>
@@ -71,17 +76,20 @@
     <li>
         <span class="param-name">{{.Name}}</span>
         <span class="param-type">{{.Type}}</span>
-        <span class="param-desc">{{.Description}}</span>
+        <span>{{.Summary}}</span>
     </li>
     {{end}}
     </ul>
 {{end}}
 
+
+
+
 {{define "response"}}
         <p><span class="status-code">status:{{.Code}}</span>{{.Summary}}</p>
 
         {{if .Headers}}
-        <h5>header</h5>
+        <h5>请求头</h5>
         <ul>
             {{range $k,$v:=.Headers}}
             <li><span class="header-key">{{$k}}:</span>{{$v}}</li>
@@ -95,7 +103,7 @@
         {{end}}
 
         {{if .Examples}}
-        <h5>example:</h5>
+        <h5>示例:</h5>
             {{range .Examples}}
             <pre class="code" data-type="{{.Type}}">{{.Code}}</pre>
             {{end}}
