修正模板页面无法通过请求方法过滤的bug

--- a/output/static/footer.html
+++ b/output/static/footer.html
@@ -11,7 +11,7 @@
             // 按请求方法过滤
             $('header .filter input').on('change', function(){
                 var val = $(this).attr('value');
-                $('.main section.'+val).each(function(index, elem){
+                $('.main section.method-'+val).each(function(index, elem){
                     $(elem).slideToggle();
                 });
             })
