--- a/index.html
+++ b/index.html
@@ -79,18 +79,18 @@
                     <p>apidoc 通过配置文件来控制其行为。配置文件名为 <code>.apidoc.json</code>。</p>
                     <pre data-indent="5">
                     {
-                        "input":{
-                            "dir":       "./",
-                            "recursive": true,
-                            "type":      "go"
+                        "version": "2.0.52.160529",
+                        "input": {
+                            "lang": "go",
+                            "dir": "./",
+                            "recursive": true
                         },
-                        "output":{
-                            "dir": "./doc"
-                        },
-                        "doc":{
-                            "title":    "doc title",
-                            "version":  "0.1beta",
-                            "baseURL":  "api.test.com"
+                        "output": {
+                            "version": "2.0",
+                            "dir": "./output/doc",
+                            "title": "yuesaopai-api",
+                            "baseURL": "",
+                            "type": "html"
                         }
                     }
                     </pre>
@@ -99,6 +99,14 @@
                             <tr><th>名称</th><th>类型</th><th>默认值</th><th>描述</th></tr>
                         </thead>
                         <tbody>
+                            <tr>
+                                <td>version</td>
+                                <td>string</td>
+                                <td>""</td>
+                                <td>产生此配置文件的 apidoc 版本</td>
+                            </tr>
+
+                            <!-- input -->
                             <tr class="warning"><td colspan="4">input:控制输入行为</td></tr>
                             <tr>
                                 <td>dir</td>
@@ -113,12 +121,13 @@
                                 <td>是否解析子目录下的源文件</td>
                             </tr>
                             <tr>
-                                <td>type</td>
+                                <td>lang</td>
                                 <td>string</td>
                                 <td>""</td>
-                                <td>源文件类型，若为空，则会通过检测dir目录下的文件类型来指定。</td>
+                                <td>源文件类型。具体支持的类型可通过 -l 参数进行查找</td>
                             </tr>
 
+                            <!-- output -->
                             <tr class="warning"><td colspan="4">output:控制输出行为</td></tr>
                             <tr>
                                 <td>dir</td>
@@ -126,8 +135,6 @@
                                 <td>""</td>
                                 <td>指定文档的保存目录</td>
                             </tr>
-
-                            <tr class="warning"><td colspan="4">doc:控制文档的行为</td></tr>
                             <tr>
                                 <td>title</td>
                                 <td>string</td>
@@ -144,7 +151,13 @@
                                 <td>baseURL</td>
                                 <td>string</td>
                                 <td>""</td>
-                                <td>文档中api地址的前缀</td>
+                                <td>文档中 api 地址的前缀</td>
+                            </tr>
+                            <tr>
+                                <td>type</td>
+                                <td>string</td>
+                                <td>""</td>
+                                <td>渲染类型，目前只支持 html</td>
                             </tr>
                         </tbody>
                     </table>
@@ -186,6 +199,13 @@
                      @api get /users/{id} 获取指定用户的相关信息
                     */
                     </pre>
+                </section>
+
+                <!-- @apiIgnore -->
+                <section id="apiignore">
+                    <h3>@apiIgnore</h3>
+                    <p>语法：<code>@apiIgnore</code></p>
+                    <p>凡是带此标签的代码块，表示该文档暂时被忽略。</p>
                 </section>
 
                 <!-- @apiGroup -->
