--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
             <div class="ui container">
                 <span class="ui text menu left floated">
-                    <a class="item" href="#">APIDOC<sub>2.0</sub></a>
+                    <a class="item" href="#">APIDOC<sub class="version">2.0</sub></a>
                 </span>
                 <nav class="ui text menu right floated">
                     <a class="item" href="#about">关于</a>
