--- a/output/static/footer.html
+++ b/output/static/footer.html
@@ -3,7 +3,7 @@
         <footer>
             <p>
                 内容由 <a href="https://caixw.github.io/apidoc">apidoc</a> 编译于 <time>{{.Date}}</time>，
-                用时{{.Elapsed}}毫秒。
+                用时{{.Elapsed}}。
             </p>
         </footer>
         <script>
