--- a/output/static/footer.html
+++ b/output/static/footer.html
@@ -2,7 +2,7 @@
     </div><!-- end .main -->
         <footer>
             <p>
-                内容由 <a href="https://caixw.github.io/apidoc">apidoc</a> 编译于 <time>{{.Date}}</time>，
+                内容由 <a href="{{.AppOfficialURL}}">{{.AppName}}</a> 编译于 <time>{{.Date}}</time>，
                 用时{{.Elapsed}}。
             </p>
         </footer>
