优化手机端显示

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>apidoc - RESTful api文档生成工具</title>
         <meta name="keywords" content="apidoc,api,RESTful api,go,cpp,doc,文档生成" />
         <meta name="description" content="apidoc : RESTful api文档生成工具" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="https://cdn.bootcss.com/semantic-ui/2.1.8/semantic.min.css" />
         <link rel="stylesheet" href="./style.css" />
         <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
@@ -36,7 +37,7 @@
             <article class="ui stacked segment" id="about">
                 <h2 class="ui header">关于</h2>
                 <p>apidoc 是一个简单的 RESTful api 文档生成工具，它从代码注释中提取特定格式的内容，生成文档。</p>
-                <p>目前已支持所有 C 语言注释风格的代码(PHP, Go, Java, Javascript, C/CPP等)和ruby代码。</p>
+                <p>目前已支持以下语言：c/cpp, go, java, javascript, php, perl, python, rust, ruby</p>
                 <pre data-indent="4">
                 /**
                  @api get /users/:id 获取指定用户的相关信息
