所有链接使用https

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- about -->
             <article class="ui stacked segment" id="about">
                 <h2 class="ui header">关于</h2>
-                <p>apidoc 是一个简单的 RESTful api 文档生成工具，它从代码注释中提取特定格式的内容，生成文档。目前已支持以下语言：C/C++、Go、Java、Javascript、PHP、Perl、Python、Rust、Ruby。</p>
+                <p>apidoc 是一个简单的 RESTful API 文档生成工具，它从代码注释中提取特定格式的内容，生成文档。目前已支持以下语言：C/C++、Go、Java、Javascript、PHP、Perl、Python、Rust、Ruby。</p>
                 <p>以下是一段简短的 Go 代码下的示例：</p>
                 <pre data-indent="4">
                 // @api get /users/:id 获取指定用户的相关信息
@@ -493,8 +493,8 @@
         <footer>
             <div class="ui container">
                 <div class="left">
-                    <p>apidoc 是基于 <a rel="license" href="http://opensource.org/licenses/MIT">MIT</a> 发布的开源软件。</p>
-                    <p>本页面内容采用<a rel="license" href="http://creativecommons.org/licenses/by/4.0/">知识共享署名 4.0 国际许可协议</a>进行许可。</p>
+                    <p>apidoc 是基于 <a rel="license" href="https://opensource.org/licenses/MIT">MIT</a> 发布的开源软件。</p>
+                    <p>本页面内容采用<a rel="license" href="https://creativecommons.org/licenses/by/4.0/">知识共享署名 4.0 国际许可协议</a>进行许可。</p>
                 </div>
 
                 <div class="right">
