修正在手机端的显示

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="./app.js"></script>
     </head>
 
-    <body>
+    <body id="body">
         <header>
             <div class="ui container">
                 <h1 class="ui text menu left floated">
@@ -408,7 +408,7 @@
                     <p>@apiRequest 描述了所有的请求该包含的内容，其本身可包含
                         <a href="#apiheader">@apiHeader</a>、
                         <a href="#aipexample">@apiExample</a> 和
-                        <a href="#apiparam">@apiParam</a>三个子标签。</p>
+                        <a href="#apiparam">@apiParam</a> 三个子标签。</p>
                     <p>语法：<code>@apiRequest type</code>，type 表示请求体的格式，可是以 json，xml。</p>
                     <p>示例：</p>
                     <pre data-indent="5">
@@ -428,7 +428,7 @@
                     <p>@apiSuccess 描述了成功响应时包含的内容，其本身可包含
                         <a href="#apiheader">@apiHeader</a>、
                         <a href="#apiexample">@apiExample</a> 和
-                        <a href="#apiparam">@apiParam</a>三个子标签。</p>
+                        <a href="#apiparam">@apiParam</a> 三个子标签。</p>
                     <p>语法：<code>@apiSuccess status summary</code></p>
                     <table class="ui very compact table">
                         <thead>
