添加自定义模板功能 通过配置文件中的 output.template 可以指定一个自定义模板

--- a/output/static/header.html
+++ b/output/static/header.html
@@ -1,4 +1,4 @@
-{{define "header"}}<!doctype html>
+{{define "header" -}}<!doctype html>
 <html>
     <head>
         <meta charset="utf-8" />
@@ -34,4 +34,4 @@
             </div>
         </header>
         <div class="main">
-{{end}}
+{{- end}}
