改变标签 @apiGroup 规则 现在 @apiGroup 不是必要标签，若未指定，则表示该文档直接出现在索引页

--- a/output/static/index.html
+++ b/output/static/index.html
@@ -14,6 +14,10 @@
         {{end}}
     </div>
 
+    {{range .IndexGroup}}
+        {{template "api" .}}
+    {{end}}
+
     {{template "footer" .}}
 
 {{end}}
