修正 input.Parse 因为锁而造成的标题负责错误

--- a/output/static/header.html
+++ b/output/static/header.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header>
-            <span class="title"><a href="./index.html">{{.Title}}</a></span>
+            <a class="title" href="./index.html">{{.Title}}</a>
             {{if .Version}}<span>{{.Version}}</span>{{end}}
             <select id="groups">
                 {{$currGroup := .GroupName}}
