--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                 <td>&#160;&#160;&#160;&#160;type</td>
                                 <td>string</td>
                                 <td>html</td>
-                                <td>渲染类型，目前只支持 html</td>
+                                <td>渲染类型，目前支持 html、json 两种类型</td>
                             </tr>
                             <tr>
                                 <td>&#160;&#160;&#160;&#160;template</td>
@@ -255,7 +255,7 @@
                 <section id="apigroup">
                     <h3>@apiGroup</h3>
                     <p>@apiGroup 提供了对 api 的分组信息，不同的分组，最终可能会被呈现在不同的页面。</p>
-                    <p>若要将文档显示在首页，则不需要指定此标签。</p>
+                    <p>若要将文档显示在首页，则不需要指定此标签或是指定为 index。</p>
                     <p>语法：<code>@apiGroup name</code></p>
                     <table class="ui vry compact table">
                         <thead>
