--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
                 <section>
                     <h3>示例</h3>
-                    <p>这里是一段简单的示例代码 <a href="https://github.com/caixw/apidoc/tree/gh-pages/example/doc">https://github.com/caixw/apidoc/tree/gh-pages/example/doc</a></p>
+                    <p>这里是一段简单的示例代码 <a href="./example">./example</a></p>
                 </section>
 
                 <section>
