更新链接错误

--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <article>
-    <p>这里是一个简单的 apidoc 示例，<a href="./src/">src</a> 目录下存放的是 Go 语言源代码，<a href="./doc/">doc</a> 目录下存放的是通过 apidoc 产生的文档内容。</p>
+    <p>这里是一个简单的 apidoc 示例，<a href="https://github.com/caixw/apidoc/tree/gh-pages/example/src">src</a> 目录下存放的是 Go 语言源代码，<a href="./doc/">doc</a> 目录下存放的是通过 apidoc 产生的文档内容。</p>
     </article>
 </body>
 </html>
