--- a/output/static/header.html
+++ b/output/static/header.html
@@ -31,6 +31,7 @@
                 <label><input type="checkbox" checked="checked" value="put">PUT</label>
                 <label><input type="checkbox" checked="checked" value="patch">PATCH</label>
                 <label><input type="checkbox" checked="checked" value="delete">DELETE</label>
+                <label><input type="checkbox" checked="checked" value="options">OPTIONS</label>
             </div>
         </header>
         <div class="main">
