--- a/output/static/footer.html
+++ b/output/static/footer.html
@@ -8,6 +8,7 @@
         </footer>
         <script>
         $(document).ready(function(){
+            // 隐藏不当前页面用不到的过滤器
             $('header .filter input').each(function(index, elem){
                 var val = $(elem).val();
                 if ($('.main section.method-'+val).length == 0) {
