--- a/output/static/footer.html
+++ b/output/static/footer.html
@@ -11,7 +11,7 @@
             // 隐藏不当前页面用不到的过滤器
             $('header .filter input').each(function(index, elem){
                 var val = $(elem).val();
-                if ($('.main section.method-'+val).length == 0) {
+                if ($('.main .api .method.'+val).length == 0) {
                     $(elem).parent().hide();
                 }
             });
@@ -19,7 +19,7 @@
             // 按请求方法过滤
             $('header .filter input').on('change', function(){
                 var val = $(this).attr('value');
-                $('.main section.method-'+val).each(function(index, elem){
+                $('.main .api .method.'+val).parents('.api').each(function(index, elem){
                     $(elem).slideToggle();
                 });
             })
