--- a/output/static/footer.html
+++ b/output/static/footer.html
@@ -30,7 +30,7 @@
             });
 
             $('.api h3').on('click', function(){
-                $(this).siblings('.api-content').slideToggle();
+                $(this).siblings('.content').slideToggle();
             });
         });
         </script>
