--- a/output/static/api.html
+++ b/output/static/api.html
@@ -12,18 +12,18 @@
         {{end}}
 
         {{if .Queries}}
-            <h4>查询参数</h4>
+            <h5>查询参数</h5>
             {{template "param" .Queries}}
         {{end}}
 
         {{if .Params}}
-            <h4>参数</h4>
+            <h5>参数</h5>
             {{template "param" .Params}}
         {{end}}
 
         {{if .Request}}
         <div>
-            <h4>请求{{if .Request.Type}}:{{.Request.Type}}{{end}}</h4>
+            <h4>请求{{if .Request.Type}}:&#160;{{.Request.Type}}{{end}}</h4>
             <div>
                 {{if .Request.Headers}}
                     <h5>报头:</h5>
@@ -36,10 +36,8 @@
                 {{end}}
 
                 {{if .Request.Examples}}
-                <h5>示例:</h5>
-                    {{range .Request.Examples}}
-                    <pre class="code" data-type="{{.Type}}">{{.Code}}</pre>
-                    {{end}}
+                    <h5>示例:</h5>
+                    {{template "examples" .Request.Examples}}
                 {{end}}
             </div>
         </div>
@@ -47,19 +45,28 @@
 
         {{if .Success}}
         <div>
-            <h4>响应-SUCCESS</h4>
+            <h4><span class="success">SUCCESS:</span>{{.Success.Code}},&#160;{{.Success.Summary}}</h4>
             {{template "response" .Success}}
         </div>
         {{end}}
 
         {{if .Error}}
         <div>
-            <h4>响应-ERROR</h4>
+            <h4><span class="error">ERROR:</span>{{.Success.Code}},&#160;{{.Success.Summary}}</h4>
             {{template "response" .Error}}
         </div>
         {{end}}
     </div>
 </section>
+{{end}}
+
+
+
+{{define "examples"}}
+{{range .}}
+<pre><code class="language-{{.Type}}">{{- .Code -}}
+</code></pre>
+{{end}}
 {{end}}
 
 
@@ -104,8 +111,6 @@
 
 {{/* @apiSuccess 和 @apiError */}}
 {{define "response"}}
-        <p><span class="status-code">status:{{.Code}}</span>{{.Summary}}</p>
-
         {{if .Headers}}
             <h5>请求头</h5>
             {{template "headers" .Headers}}
@@ -117,9 +122,7 @@
         {{end}}
 
         {{if .Examples}}
-        <h5>示例:</h5>
-            {{range .Examples}}
-            <pre class="code" data-type="{{.Type}}">{{.Code}}</pre>
-            {{end}}
+            <h5>示例:</h5>
+            {{template "examples" .Examples}}
         {{end}}
 {{end}}
