--- a/output/static/header.html
+++ b/output/static/header.html
@@ -14,6 +14,7 @@
         </title>
         <link rel="stylesheet" href="./style.css" />
         <script src="./jquery-3.0.0.min.js"></script>
+        <script src="./app.js"></script>
     </head>
     <body>
         <header>
